Add scouter-project Dockerfile.

--- a/awscli/cli/Dockerfile
+++ b/awscli/cli/Dockerfile
@@ -1,5 +1,7 @@
 FROM python:3
 
+LABEL maintainer="Mujahid Khaleel <mujahidkhaleel@gmail.com>"
+
 ENV PATH="${PATH}:/root/.local/bin"
 
 RUN pip3 install awscli --upgrade --user
