Move artifactory schema user and password to env file.

--- a/jenkins-suite/docker-compose.yml
+++ b/jenkins-suite/docker-compose.yml
@@ -13,8 +13,10 @@ services:
     image: postgres:10.10
     restart: always
     environment:
-      POSTGRES_USER: ${SONAR_POSTGRES_USER}
-      POSTGRES_PASSWORD: ${SONAR_POSTGRES_PASSWORD}
+      - POSTGRES_USER=${SONAR_POSTGRES_USER}
+      - POSTGRES_PASSWORD=${SONAR_POSTGRES_PASSWORD}
+      - ARTIFACTORY_POSTGRES_USER=${ARTIFACTORY_POSTGRES_USER}
+      - ARTIFACTORY_POSTGRES_PASSWORD=${ARTIFACTORY_POSTGRES_PASSWORD}
     ports:
     - 5432:5432
     volumes:
