Add Maven M2 volume.

--- a/jenkins-suite/docker-compose.yml
+++ b/jenkins-suite/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - jenkins_home:/var/jenkins_home
       - release_packages:/repo/releases
+      - maven_m2:/root/.m2
     ports:
       - 8080:8080
       - 50000:50000
@@ -61,3 +62,4 @@ volumes:
   release_packages:
   postgres_data:
   artifactory_data:
+  maven_m2:
