Add Glowroot central docker image.

--- a/glowroot/docker-compose.yml
+++ b/glowroot/docker-compose.yml
@@ -3,8 +3,15 @@ version: "3.7"
 services:
   cassandra:
     image: cassandra
+  # glowroot:
+  #   image: glowroot/glowroot-central:0.13.5
+  #   ports:
+  #       - 4000:4000
+  #       - 8181:8181
+  #   depends_on:
+  #     - cassandra
   glowroot:
-    image: glowroot/glowroot-central:0.13.5
+    build: cental
     ports:
         - 4000:4000
         - 8181:8181
