Add Glowroot agent to sample application.

--- a/glowroot/sample-app/Dockerfile
+++ b/glowroot/sample-app/Dockerfile
@@ -1,3 +1,9 @@
-FROM openjdk:8
+FROM mujahidkhaleel/geograph:develop
 
 LABEL maintainer="Mujahid Khaleel <mujahidkhaleel@gmail.com>"
+
+RUN mkdir -p /opt/glowtoot/agent/
+COPY glowroot/glowroot.jar /opt/glowtoot/agent/
+COPY glowroot/glowroot.properties /opt/glowtoot/agent/
+
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-javaagent:/opt/glowtoot/agent/glowroot.jar","-jar","/app.jar"]
