--- a/jenkins-suite/docker-compose.yml
+++ b/jenkins-suite/docker-compose.yml
@@ -53,6 +53,12 @@ services:
     volumes:
       - artifactory_data:/var/opt/jfrog/artifactory
     restart: always
+  nexus:
+    image: sonatype/nexus3
+    volumes:
+      - nexus_data:/nexus-data
+    ports:
+      - 8082:8081
 
 volumes:
   sonarqube_data:
@@ -63,3 +69,4 @@ volumes:
   postgres_data:
   artifactory_data:
   maven_m2:
+  nexus_data:
